fix(front): update layout and styling for App component to enhance scrollbar visibility and spacing

--- a/apps/desktop/src/globals.css
+++ b/apps/desktop/src/globals.css
@@ -174,3 +174,15 @@ img[draggable=true] {
 *:focus {
     outline: none;
 }
+
+/* Remove browser scrollbar */
+.app {
+  height: 100vh;
+  overflow-y: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.app::-webkit-scrollbar{
+  display:none;
+}
